# haitang-cms

./: .gitignore  .gitmodules  Cargo.toml  DESIGN.md  README.md  Rocket.toml  Todo.md  build.rs
.github/workflows/: ci.yml
admin-web/: .env.development  .env.production  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  unocss.config.js  unocss.config.ts  vite.config.ts
admin-web/scripts/: syncMdEditorVendors.mjs
admin-web/src/: App.vue  main.ts  settings.ts  vite-env.d.ts
admin-web/vite/: devPublicRedirectPlugin.d.ts  devPublicRedirectPlugin.js  devPublicRedirectPlugin.ts  syncFileIconsPlugin.ts
docs/: book.toml
docs/src/: SUMMARY.md  admin-api.md  admin-api.md#创建文章  admin-api.md#删除文章  admin-api.md#更新文章  admin-api.md#登录授权  admin-ui.md  admin-ui.md#菜单-icon-字段展示规则  i18n-data-model.md  markdown.md  overview.md  public-api.md  public-api.md#获取文章详情
src/: config.rs  db_migrate.rs  db_patch.rs  main.rs  rss.rs
src/guards/: auth.rs  mod.rs
src/models/: admin_sidebar.rs  asset.rs  auth.rs  banner.rs  banner_group.rs  banner_meta.rs  category.rs  dict.rs  dict_meta.rs  dict_value.rs  entity_seq.rs  friend_link.rs  locale.rs  menu.rs  menu_group.rs  menu_item.rs  mod.rs  permission.rs  post.rs  response.rs  (+3 more)
templates/: about-detail.html.tera  about-list.html.tera  about.html.tera  admin.html.tera  base.html.tera  category-list.html.tera  gallery-detail.html.tera  gallery-list.html.tera  index.html.tera  post-detail.html.tera  posts.html.tera  recruitment-detail.html.tera  recruitment-list.html.tera  rss.xml.tera
(+168 files in other folders)
