[package]
name = "haitang-cms"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { path = "vendor/Rocket/core/lib", features = ["json"] }
rocket_dyn_templates = { path = "vendor/Rocket/contrib/dyn_templates", features = ["tera"] }
toasty = { path = "vendor/toasty/crates/toasty", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
jsonwebtoken = "9"
bcrypt = "0.17"
