[package]
name = "haitang-cms"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
rocket = { git = "https://github.com/rwf2/Rocket", rev = "3a54d079aef060a8f732bd04ea54b0581a604087", features = ["json"] }
rocket_dyn_templates = { git = "https://github.com/rwf2/Rocket", rev = "3a54d079aef060a8f732bd04ea54b0581a604087", features = ["tera"] }
toasty = { git = "https://github.com/tokio-rs/toasty", rev = "bc4e9100629bf962c68f6bc4a062073aa5b830a7", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v7"] }
infer = "0.19"
jsonwebtoken = "9"
bcrypt = "0.17"
